overflow fix scroll

--- a/rand/assets/css/styles.css
+++ b/rand/assets/css/styles.css
@@ -117,11 +117,15 @@ p {
 }
 
 p code {
-  @apply p-1 overflow-x-scroll font-mono bg-orange-100;
+  @apply p-1 overflow-x-auto font-mono bg-orange-100;
 }
 
 .highlight pre {
-  @apply p-2 pl-4 my-8 overflow-x-scroll;
+  @apply p-2 pl-4 my-8 overflow-x-auto;
+}
+
+.highlight {
+  @apply overflow-x-auto;
 }
 
 /* pre code {
@@ -156,7 +160,7 @@ ul {
 }
 
 pre {
-  @apply p-1 overflow-x-scroll;
+  @apply p-1 overflow-x-auto;
 }
 
 @media (max-width: 900px) {
